# ascii-rpg

./: .gitignore  CMakeLists.txt  LICENCE
src/: main.cpp
src/Core/: Core.pch  Entities.hpp  Math.hpp  Random.hpp
src/Core/Collections/: List.hpp
src/Core/Numerics/: Vector2f.hpp  Vector2i.hpp
src/Events/: Event.hpp  InputEvent.hpp
src/Gameplay/: Board.cpp  Board.hpp  Cell.hpp  Character.hpp  Game.cpp  Game.hpp  Scene.hpp  Tilemap.cpp  Tilemap.hpp
src/Gameplay/Components/: ColoredTextComponent.hpp  PositionComponent.hpp  TileComponent.hpp  TranslationComponent.hpp
src/Gameplay/States/: IGameState.hpp  MainMenuGameState.cpp  MainMenuGameState.hpp
src/Gameplay/Systems/: CollisionSystem.cpp  CollisionSystem.hpp  ConsoleRenderingSystem.cpp  ConsoleRenderingSystem.hpp  IGameSystem.hpp  TranslationSystem.cpp  TranslationSystem.hpp
src/Graphics/: Color.hpp  Console.cpp  Console.hpp
src/Input/: ConsoleInput.cpp  ConsoleInput.hpp  IInput.hpp  InputKey.hpp
src/Views/: IView.hpp
src/Views/Console/: BoardConsoleView.cpp  BoardConsoleView.hpp  CharacterConsoleView.cpp  CharacterConsoleView.hpp
